# practiceCL

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mdy/practicecl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/mdy/practicecl/: IDataTransaction.aidl
app/src/main/assets/: 1.h264  common.glsl
app/src/main/cpp/: CMakeLists.txt  dynamic_register.cpp  ffmpeg_op.cpp  native-lib.cpp
app/src/main/cpp/include/: NALUParse.h  PushStream.h  cl_1.h  class_simple1.h  class_struct.h  class_v.h  egl_config.h  ffmpegAudio.h  ffmpeg_decoder.h  ffmpeg_encoder.h  ffmpeg_play.h  ffmpeg_rtmp.h  ffmpeg_test.h  learn_c_base_yf.h  learn_thread.h
app/src/main/cpp/src/: NALUParse.cpp  PushStream.cpp  cl_1.cpp  class_simple1.cpp  class_struct.cpp  class_v.cpp  egl_config.cpp  ffmpegAudio.cpp  ffmpeg_decoder.cpp  ffmpeg_encoder.cpp  ffmpeg_play.cpp  ffmpeg_rtmp.cpp  learn_c_base_yf.cpp  learn_thread.cpp
app/src/main/java/com/mdy/practicecl/: AacActivity.kt  App.kt  CamearLiveActivity.kt  EGLActivity.kt  FFmpegctivity.kt  MainActivity.kt  OpenGLActivity.kt  Utils.java
app/src/main/java/com/mdy/practicecl/audio/: AACDecoder.kt  AACEncoder.kt  AacUtils.kt  AudioFrame.kt  AudioFrameCallback.kt  AudioPlayer.kt  AudioProcess.kt  MediaPacket.kt  MuxerUtil.kt  RecordUtil.kt  Records.kt
app/src/main/java/com/mdy/practicecl/codec/: H264Activity.kt  H264Decoder.kt  H264Encoder.kt  MediaUtils.kt  Stream.kt
app/src/main/java/com/mdy/practicecl/muxer/: IEncoderDataListener.kt  MuxerActivity.kt  MuxerStrategy.kt
app/src/main/java/com/mdy/practicecl/opengl/: Camera1.kt  CameraSurface.kt  DrawBuffer.kt  EGL.kt  EglCore.kt  GLDrawableUtils.kt  GLTranslation.kt  GlUtils.kt  OpenGLActivity.kt  StencilDraw.kt  TextureSurface.kt
app/src/main/java/com/mdy/practicecl/player/: AudioDecoder.kt  AudioProcess.kt  DisplayRect.kt  OverlayProgram.kt  PipScene.kt  VideoDecoder.kt  VideoPlayActivity.kt
app/src/main/res/layout/: activity_aac.xml  activity_eglactivity.xml  activity_ffmpegctivity.xml  activity_glactivity.xml  activity_h264.xml  activity_main.xml  activity_muxer.xml  activity_video_play.xml  test_wv.xml
app/src/main/res/raw/: common_vertex_shader.glsl  green_screen_fragment_shader.glsl  simple_fragment_shader.glsl  simple_oes_shader.glsl  simple_vertex_shader.glsl  simple_zoom_fragment.glsl  splite_fragment_shader.glsl  squeeze_fragment.glsl  three_splite_fragment_shader.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mdy/practicecl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jk/src/main/java/com/mdy/jk/: LockUtils.kt  ObjUtils.java  SyncUtils.java  VolatileUtils.java
library_process/: build.gradle
library_process/src/androidTest/java/com/mdy/library_process/: ExampleInstrumentedTest.kt
library_process/src/main/java/com/mdy/library_process/: BinderProxyImpl.kt
library_process/src/test/java/com/mdy/library_process/: ExampleUnitTest.kt
